--- a/client_code/Homepage/RowTemplate1/form_template.yaml
+++ b/client_code/Homepage/RowTemplate1/form_template.yaml
@@ -2,7 +2,7 @@ is_package: true
 container:
   type: DataRowPanel
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', auto_display_data: true,
-    visible: true, font_size: null, font: '', spacing_above: none, spacing_below: none,
+    visible: true, font_size: 14, font: '', spacing_above: none, spacing_below: none,
     italic: false, background: '', bold: false, underline: false}
 components:
 - type: Link
@@ -20,7 +20,7 @@ components:
     layout_properties: {grid_position: 'RFPMOC,OYYRAS'}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: '', font_size: 16, font: '', spacing_above: small, icon_align: left, spacing_below: small,
+    text: '', font_size: 14, font: '', spacing_above: small, icon_align: left, spacing_below: small,
     italic: false, background: '', bold: false, underline: false, icon: ''}
   layout_properties: {column: JVSRGA}
   data_bindings:
@@ -36,7 +36,7 @@ components:
   - {property: source, code: 'self.item[''job_status''][''icon'']'}
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: '', font_size: 16, font: '', spacing_above: small, icon_align: left, spacing_below: small,
+    text: '', font_size: 14, font: '', spacing_above: small, icon_align: left, spacing_below: small,
     italic: false, background: '', bold: false, underline: false, icon: ''}
   layout_properties: {column: FREDFV}
   data_bindings:
@@ -44,7 +44,7 @@ components:
   name: label_3
 - type: Label
   properties: {role: null, align: left, tooltip: '', border: '', foreground: '', visible: true,
-    text: '', font_size: 16, font: '', spacing_above: small, icon_align: left, spacing_below: small,
+    text: '', font_size: 14, font: '', spacing_above: small, icon_align: left, spacing_below: small,
     italic: false, background: '', bold: false, underline: false, icon: ''}
   name: label_5
   layout_properties: {column: DCIFYE}
