--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -5,11 +5,63 @@ container:
 components:
 - type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: medium, spacing_above: none, col_widths: '', spacing_below: none,
-    background: ''}
+    wrap_on: mobile, col_spacing: medium, spacing_above: none, col_widths: '{"XBCCME":10,"TYXRFN":40,"FDLSMS":10}',
+    spacing_below: none, background: ''}
   name: filterpanel
   layout_properties: {slot: filter-panel}
   components:
+  - type: Spacer
+    properties: {height: 32}
+    name: spacer_1
+    layout_properties: {grid_position: 'XWVFEQ,XBCCME'}
+  - type: ColumnPanel
+    properties: {role: outlined-card, tooltip: '', border: 1px solid, foreground: 'theme:Filter
+        Border', visible: true, wrap_on: mobile, col_spacing: tiny, spacing_above: small,
+      col_widths: '{"HCFJNO":50,"XCODBF":15,"NJDNWA":15}', spacing_below: large, background: ''}
+    name: column_panel_3
+    layout_properties: {grid_position: 'XWVFEQ,TYXRFN'}
+    components:
+    - type: ColumnPanel
+      properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
+        wrap_on: never, col_spacing: none, spacing_above: none, col_widths: '{"FOCTRF":53,"HSYYLX":7}',
+        spacing_below: none, background: ''}
+      name: column_panel_4
+      layout_properties: {grid_position: 'OKXPYN,HCFJNO'}
+      components:
+      - type: TextBox
+        properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: Search escalations,
+          border: none, enabled: true, foreground: '', visible: true, text: '', font_size: null,
+          font: '', spacing_above: medium, type: text, spacing_below: none, italic: false,
+          background: '', bold: false, underline: false}
+        name: text_box_1
+        layout_properties: {grid_position: 'DQVXYD,FOCTRF'}
+        event_bindings: {pressed_enter: filter_change}
+      - type: Link
+        properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+          visible: false, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
+          spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
+          italic: false, background: '', bold: false, underline: false, icon: 'fa:times-circle'}
+        name: link_1
+        layout_properties: {grid_position: 'DQVXYD,HSYYLX'}
+    - type: Button
+      properties: {role: outlined-button, align: center, tooltip: '', border: '',
+        enabled: true, foreground: '', visible: true, text: Search, font_size: 14,
+        font: '', spacing_above: medium, icon_align: left, spacing_below: medium,
+        italic: false, background: '', bold: false, underline: false, icon: 'fa:search'}
+      name: button_4
+      layout_properties: {grid_position: 'OKXPYN,NJDNWA'}
+      event_bindings: {click: filter_change}
+    - type: Button
+      properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
+        foreground: '', visible: true, text: Filters, font_size: 14, font: '', spacing_above: medium,
+        icon_align: left, spacing_below: medium, italic: false, background: '', bold: false,
+        underline: false, icon: 'fa:sliders'}
+      name: button_3
+      layout_properties: {grid_position: 'OKXPYN,XCODBF'}
+  - type: Spacer
+    properties: {height: 32}
+    name: spacer_2
+    layout_properties: {grid_position: 'XWVFEQ,FDLSMS'}
   - type: GridPanel
     properties: {spacing_above: small, spacing_below: none, background: '', foreground: '',
       border: 1px, visible: true, role: null, tooltip: ''}
@@ -432,61 +484,11 @@ components:
       event_bindings: {click: new_escalation}
 - type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: never, col_spacing: none, spacing_above: none, col_widths: '{"QBSFVJ":15,"RHGMQB":50,"KNBXHE":15}',
-    spacing_below: none, background: ''}
+    wrap_on: never, col_spacing: none, spacing_above: none, col_widths: '{}', spacing_below: none,
+    background: ''}
   name: column_panel_2
   layout_properties: {slot: default}
   components:
-  - type: Spacer
-    properties: {height: 32}
-    name: spacer_1
-    layout_properties: {grid_position: 'GQQNMM,QBSFVJ'}
-  - type: ColumnPanel
-    properties: {role: outlined-card, tooltip: '', border: 1px solid, foreground: 'theme:Filter
-        Border', visible: true, wrap_on: mobile, col_spacing: tiny, spacing_above: small,
-      col_widths: '{"HCFJNO":50,"XCODBF":15,"NJDNWA":15}', spacing_below: small, background: ''}
-    name: column_panel_3
-    layout_properties: {grid_position: 'GQQNMM,RHGMQB'}
-    components:
-    - type: ColumnPanel
-      properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-        wrap_on: never, col_spacing: none, spacing_above: none, col_widths: '{"FOCTRF":53,"HSYYLX":7}',
-        spacing_below: none, background: ''}
-      name: column_panel_4
-      layout_properties: {grid_position: 'OKXPYN,HCFJNO'}
-      components:
-      - type: TextBox
-        properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: 'Search
-            escalation ', border: none, enabled: true, foreground: '', visible: true,
-          text: '', font_size: null, font: '', spacing_above: medium, type: text,
-          spacing_below: none, italic: false, background: '', bold: false, underline: false}
-        name: text_box_1
-        layout_properties: {grid_position: 'DQVXYD,FOCTRF'}
-      - type: Link
-        properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
-          visible: true, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
-          spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
-          italic: false, background: '', bold: false, underline: false, icon: 'fa:times-circle'}
-        name: link_1
-        layout_properties: {grid_position: 'DQVXYD,HSYYLX'}
-    - type: Button
-      properties: {role: outlined-button, align: center, tooltip: '', border: '',
-        enabled: true, foreground: '', visible: true, text: Search, font_size: 14,
-        font: '', spacing_above: medium, icon_align: left, spacing_below: medium,
-        italic: false, background: '', bold: false, underline: false, icon: 'fa:search'}
-      name: button_4
-      layout_properties: {grid_position: 'OKXPYN,NJDNWA'}
-    - type: Button
-      properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
-        foreground: '', visible: true, text: Filters, font_size: 14, font: '', spacing_above: medium,
-        icon_align: left, spacing_below: medium, italic: false, background: '', bold: false,
-        underline: false, icon: 'fa:sliders'}
-      name: button_3
-      layout_properties: {grid_position: 'OKXPYN,XCODBF'}
-  - type: Spacer
-    properties: {height: 32}
-    name: spacer_2
-    layout_properties: {grid_position: 'GQQNMM,KNBXHE'}
   - type: GridPanel
     properties: {spacing_above: none, spacing_below: none, background: '', foreground: '',
       border: '', visible: true, role: null, tooltip: ''}
