--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -5,21 +5,17 @@ container:
 components:
 - type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: medium, spacing_above: none, col_widths: '{"XBCCME":10,"TYXRFN":40,"FDLSMS":10}',
-    spacing_below: none, background: ''}
+    wrap_on: mobile, col_spacing: medium, spacing_above: none, col_widths: '{}', spacing_below: none,
+    background: ''}
   name: filterpanel
-  layout_properties: {slot: filter-panel}
+  layout_properties: {slot: filterpanel}
   components:
-  - type: Spacer
-    properties: {height: 32}
-    name: spacer_1
-    layout_properties: {grid_position: 'XWVFEQ,XBCCME'}
   - type: ColumnPanel
     properties: {role: outlined-card, tooltip: '', border: 1px solid, foreground: 'theme:Filter
         Border', visible: true, wrap_on: mobile, col_spacing: tiny, spacing_above: small,
       col_widths: '{"HCFJNO":50,"XCODBF":15,"NJDNWA":15}', spacing_below: large, background: ''}
-    name: column_panel_3
-    layout_properties: {grid_position: 'XWVFEQ,TYXRFN'}
+    name: selectpanel
+    layout_properties: {grid_position: 'XNUIKQ,YZNJSG', full_width_row: true}
     components:
     - type: ColumnPanel
       properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
@@ -58,10 +54,6 @@ components:
         underline: false, icon: 'fa:sliders'}
       name: button_3
       layout_properties: {grid_position: 'OKXPYN,XCODBF'}
-  - type: Spacer
-    properties: {height: 32}
-    name: spacer_2
-    layout_properties: {grid_position: 'XWVFEQ,FDLSMS'}
   - type: GridPanel
     properties: {spacing_above: small, spacing_below: none, background: '', foreground: '',
       border: 1px, visible: true, role: null, tooltip: ''}
@@ -620,5 +612,5 @@ components:
     multiple: false
     icon: fa:upload
   name: file_loader_1
-  layout_properties: {row: UCABRM, width_xs: 12, col_xs: 0, width: 1013.98}
+  layout_properties: {row: UCABRM, width_xs: 12, col_xs: 0, width: 1013.98, slot: ''}
   event_bindings: {change: file_loader_1_change}
