--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -8,52 +8,8 @@ components:
     wrap_on: mobile, col_spacing: medium, spacing_above: none, col_widths: '{}', spacing_below: none,
     background: ''}
   name: filterpanel
-  layout_properties: {slot: filter-panel}
+  layout_properties: {slot: filterpanel}
   components:
-  - type: ColumnPanel
-    properties: {role: outlined-card, tooltip: '', border: 1px solid, foreground: 'theme:Filter
-        Border', visible: true, wrap_on: mobile, col_spacing: tiny, spacing_above: small,
-      col_widths: '{"HCFJNO":50,"XCODBF":15,"NJDNWA":15}', spacing_below: large, background: ''}
-    name: selectpanel
-    layout_properties: {grid_position: 'XNUIKQ,YZNJSG', full_width_row: true}
-    components:
-    - type: ColumnPanel
-      properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-        wrap_on: never, col_spacing: none, spacing_above: none, col_widths: '{"FOCTRF":53,"HSYYLX":7}',
-        spacing_below: none, background: ''}
-      name: column_panel_4
-      layout_properties: {grid_position: 'OKXPYN,HCFJNO'}
-      components:
-      - type: TextBox
-        properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: Search escalations,
-          border: none, enabled: true, foreground: '', visible: true, text: '', font_size: null,
-          font: '', spacing_above: medium, type: text, spacing_below: none, italic: false,
-          background: '', bold: false, underline: false}
-        name: text_box_1
-        layout_properties: {grid_position: 'DQVXYD,FOCTRF'}
-        event_bindings: {pressed_enter: filter_change}
-      - type: Link
-        properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
-          visible: false, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
-          spacing_above: small, icon_align: left, col_widths: '', spacing_below: small,
-          italic: false, background: '', bold: false, underline: false, icon: 'fa:times-circle'}
-        name: link_1
-        layout_properties: {grid_position: 'DQVXYD,HSYYLX'}
-    - type: Button
-      properties: {role: outlined-button, align: center, tooltip: '', border: '',
-        enabled: true, foreground: '', visible: true, text: Search, font_size: 14,
-        font: '', spacing_above: medium, icon_align: left, spacing_below: medium,
-        italic: false, background: '', bold: false, underline: false, icon: 'fa:search'}
-      name: button_4
-      layout_properties: {grid_position: 'OKXPYN,NJDNWA'}
-      event_bindings: {click: filter_change}
-    - type: Button
-      properties: {role: filled-button, align: center, tooltip: '', border: '', enabled: true,
-        foreground: '', visible: true, text: Filters, font_size: 14, font: '', spacing_above: medium,
-        icon_align: left, spacing_below: medium, italic: false, background: '', bold: false,
-        underline: false, icon: 'fa:sliders'}
-      name: button_3
-      layout_properties: {grid_position: 'OKXPYN,XCODBF'}
   - type: GridPanel
     properties: {spacing_above: small, spacing_below: none, background: '', foreground: '',
       border: 1px, visible: true, role: null, tooltip: ''}
@@ -614,3 +570,55 @@ components:
   name: file_loader_1
   layout_properties: {row: UCABRM, width_xs: 12, col_xs: 0, width: 1013.98, slot: ''}
   event_bindings: {change: file_loader_1_change}
+- type: ColumnPanel
+  properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
+    wrap_on: mobile, col_spacing: tiny, spacing_above: small, col_widths: '{}', spacing_below: large,
+    background: ''}
+  name: selectpanel
+  layout_properties: {grid_position: 'XNUIKQ,YZNJSG', full_width_row: true, slot: filterselect}
+  components:
+  - type: ColumnPanel
+    properties: {role: outlined-card, tooltip: '', border: 1px solid, foreground: 'theme:Filter
+        Border', visible: true, wrap_on: never, col_spacing: medium, spacing_above: small,
+      col_widths: '{"KAZWCC":30,"VEIXMU":10,"JCYLBV":20}', spacing_below: small, background: ''}
+    name: column_panel_3
+    layout_properties: {grid_position: 'OWIDMW,AQHZXR'}
+    components:
+    - type: ColumnPanel
+      properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
+        wrap_on: never, col_spacing: none, spacing_above: none, col_widths: '{"FOCTRF":45,"HSYYLX":15}',
+        spacing_below: none, background: ''}
+      name: column_panel_4
+      layout_properties: {grid_position: 'BLESZH,KAZWCC'}
+      components:
+      - type: TextBox
+        properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: Search escalations,
+          border: none, enabled: true, foreground: '', visible: true, text: '', font_size: null,
+          font: '', spacing_above: medium, type: text, spacing_below: none, italic: false,
+          background: '', bold: false, underline: false}
+        name: text_box_1
+        layout_properties: {grid_position: 'DQVXYD,FOCTRF'}
+        event_bindings: {pressed_enter: filter_change}
+      - type: Link
+        properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
+          visible: false, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
+          spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
+          italic: false, background: '', bold: false, underline: false, icon: 'fa:times-circle'}
+        name: link_1
+        layout_properties: {grid_position: 'DQVXYD,HSYYLX'}
+        components: []
+    - type: Button
+      properties: {role: outlined-button, align: center, tooltip: '', border: '',
+        enabled: true, foreground: '', visible: true, text: Search, font_size: 14,
+        font: '', spacing_above: medium, icon_align: left, spacing_below: medium,
+        italic: false, background: '', bold: false, underline: false, icon: 'fa:search'}
+      name: button_4
+      layout_properties: {grid_position: 'BLESZH,VEIXMU'}
+      event_bindings: {click: filter_change}
+    - type: Button
+      properties: {role: filled-button, align: left, tooltip: '', border: '', enabled: true,
+        foreground: '', visible: true, text: Filters, font_size: 14, font: '', spacing_above: medium,
+        icon_align: left, spacing_below: medium, italic: false, background: '', bold: false,
+        underline: false, icon: 'fa:sliders'}
+      name: button_3
+      layout_properties: {grid_position: 'BLESZH,JCYLBV'}
