--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -572,15 +572,19 @@ components:
   event_bindings: {change: file_loader_1_change}
 - type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-    wrap_on: mobile, col_spacing: tiny, spacing_above: small, col_widths: '{}', spacing_below: large,
-    background: ''}
+    wrap_on: mobile, col_spacing: tiny, spacing_above: small, col_widths: '{"AQHZXR":50,"NEKHRQ":15,"RWYDAC":15}',
+    spacing_below: large, background: ''}
   name: selectpanel
   layout_properties: {grid_position: 'XNUIKQ,YZNJSG', full_width_row: true, slot: filterselect}
   components:
+  - type: Spacer
+    properties: {height: 32}
+    name: spacer_2
+    layout_properties: {grid_position: 'OWIDMW,RWYDAC'}
   - type: ColumnPanel
     properties: {role: outlined-card, tooltip: '', border: 1px solid, foreground: 'theme:Filter
         Border', visible: true, wrap_on: never, col_spacing: medium, spacing_above: small,
-      col_widths: '{"KAZWCC":30,"VEIXMU":10,"JCYLBV":20}', spacing_below: small, background: ''}
+      col_widths: '{"KAZWCC":30,"VEIXMU":15,"JCYLBV":15}', spacing_below: small, background: ''}
     name: column_panel_3
     layout_properties: {grid_position: 'OWIDMW,AQHZXR'}
     components:
@@ -622,3 +626,7 @@ components:
         underline: false, icon: 'fa:sliders'}
       name: button_3
       layout_properties: {grid_position: 'BLESZH,JCYLBV'}
+  - type: Spacer
+    properties: {height: 32}
+    name: spacer_1
+    layout_properties: {grid_position: 'OWIDMW,NEKHRQ'}
