--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -360,30 +360,14 @@ components:
       - {code: 'self.filters[''esc_type'']', writeback: true, property: selected_value}
       event_bindings: {change: filter_change}
       name: dd_esc_type
-    - type: ColumnPanel
-      properties: {role: outlined-card, tooltip: '', border: 1px solid, foreground: 'theme:Filter
-          Border', visible: true, wrap_on: never, col_spacing: none, spacing_above: none,
-        col_widths: '{"MVKOEY":65,"RDQTJH":15}', spacing_below: none, background: ''}
-      layout_properties: {row: YQKNAU, width_xs: 3, col_xs: 0, width: 182.5}
-      name: searchbox
-      components:
-      - type: TextBox
-        properties: {role: outlined, align: left, hide_text: false, tooltip: enter a search term and hit enter,
-          placeholder: Search, border: none, enabled: true, foreground: '', visible: true,
-          text: '', font_size: null, font: '', spacing_above: none, type: text, spacing_below: none,
-          italic: false, background: '', bold: false, underline: false}
-        layout_properties: {row: HZZHOZ, width_xs: 2, col_xs: 3, width: 116, grid_position: 'TYKSEW,MVKOEY'}
-        event_bindings: {pressed_enter: filter_change}
-        name: text_box_search
-      - type: Link
-        properties: {role: null, url: '', align: left, tooltip: clear search, border: '',
-          foreground: '', visible: false, text: '', font_size: null, wrap_on: never,
-          font: '', col_spacing: none, spacing_above: none, icon_align: right, col_widths: '',
-          spacing_below: none, italic: false, background: '', bold: false, underline: false,
-          icon: 'fa:times-circle'}
-        layout_properties: {row: YQKNAU, width_xs: 1, col_xs: 8, width: 148, grid_position: 'TYKSEW,RDQTJH'}
-        event_bindings: {click: clear_search}
-        name: clear_icon
+    - type: Button
+      properties: {role: green-filled-button, align: left, tooltip: '', border: '',
+        enabled: true, foreground: '', visible: true, text: Create new, font_size: 14,
+        font: '', spacing_above: none, icon_align: right, spacing_below: none, italic: false,
+        background: '', bold: false, underline: false, icon: 'fa:plus-circle'}
+      name: button_2
+      layout_properties: {row: YQKNAU, width_xs: 3, col_xs: 0, width: 199.25}
+      event_bindings: {click: new_escalation}
     - type: CheckBox
       properties: {role: switch-rounded, align: right, tooltip: '', border: '', enabled: true,
         foreground: 'theme:Filter Font', allow_indeterminate: false, visible: true,
@@ -422,14 +406,6 @@ components:
       layout_properties: {row: YQKNAU, width_xs: 2, col_xs: 9, width: 146.828}
       event_bindings: {click: filter_change}
       name: button_1
-    - type: Button
-      properties: {role: green-filled-button, align: left, tooltip: '', border: '',
-        enabled: true, foreground: '', visible: true, text: Create new, font_size: 14,
-        font: '', spacing_above: none, icon_align: right, spacing_below: none, italic: false,
-        background: '', bold: false, underline: false, icon: 'fa:plus-circle'}
-      name: button_2
-      layout_properties: {row: JOTUVB, width_xs: 3, col_xs: 0, width: 199.25}
-      event_bindings: {click: new_escalation}
 - type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
     wrap_on: never, col_spacing: none, spacing_above: none, col_widths: '{}', spacing_below: none,
@@ -590,7 +566,7 @@ components:
     components:
     - type: ColumnPanel
       properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-        wrap_on: never, col_spacing: none, spacing_above: none, col_widths: '{"FOCTRF":45,"HSYYLX":15}',
+        wrap_on: never, col_spacing: none, spacing_above: none, col_widths: '{"FOCTRF":65,"UVKESM":10}',
         spacing_below: none, background: ''}
       name: column_panel_4
       layout_properties: {grid_position: 'BLESZH,KAZWCC'}
@@ -600,17 +576,18 @@ components:
           border: none, enabled: true, foreground: '', visible: true, text: '', font_size: null,
           font: '', spacing_above: medium, type: text, spacing_below: none, italic: false,
           background: '', bold: false, underline: false}
-        name: text_box_1
+        name: text_box_search
         layout_properties: {grid_position: 'DQVXYD,FOCTRF'}
         event_bindings: {pressed_enter: filter_change}
       - type: Link
-        properties: {role: null, url: '', align: left, tooltip: '', border: '', foreground: '',
-          visible: false, text: '', font_size: null, wrap_on: mobile, font: '', col_spacing: medium,
-          spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
-          italic: false, background: '', bold: false, underline: false, icon: 'fa:times-circle'}
-        name: link_1
-        layout_properties: {grid_position: 'DQVXYD,HSYYLX'}
-        components: []
+        properties: {role: null, url: '', align: left, tooltip: clear search, border: '',
+          foreground: '', visible: false, text: '', font_size: null, wrap_on: never,
+          font: '', col_spacing: none, spacing_above: none, icon_align: right, col_widths: '',
+          spacing_below: none, italic: false, background: '', bold: false, underline: false,
+          icon: 'fa:times-circle'}
+        layout_properties: {row: YQKNAU, width_xs: 1, col_xs: 8, width: 148, grid_position: 'DQVXYD,UVKESM'}
+        event_bindings: {click: clear_search}
+        name: clear_icon
     - type: Button
       properties: {role: outlined-button, align: center, tooltip: '', border: '',
         enabled: true, foreground: '', visible: true, text: Search, font_size: 14,
