--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -541,7 +541,7 @@ components:
 - type: ColumnPanel
   properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
     wrap_on: mobile, col_spacing: tiny, spacing_above: small, col_widths: '{"AQHZXR":50,"NEKHRQ":15,"RWYDAC":15}',
-    spacing_below: large, background: ''}
+    spacing_below: none, background: ''}
   name: selectpanel
   layout_properties: {grid_position: 'XNUIKQ,YZNJSG', full_width_row: true, slot: filterselect}
   components:
@@ -552,7 +552,7 @@ components:
   - type: ColumnPanel
     properties: {role: outlined-card, tooltip: '', border: 1px solid, foreground: 'theme:Filter
         Border', visible: true, wrap_on: never, col_spacing: medium, spacing_above: small,
-      col_widths: '{"KAZWCC":30,"VEIXMU":15,"JCYLBV":15}', spacing_below: small, background: ''}
+      col_widths: '{"KAZWCC":30,"VEIXMU":15,"JCYLBV":15}', spacing_below: none, background: ''}
     name: column_panel_3
     layout_properties: {grid_position: 'OWIDMW,AQHZXR'}
     components:
