--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -581,15 +581,15 @@ components:
         event_bindings: {click: clear_search}
         name: clear_icon
     - type: Button
-      properties: {role: outlined-button, align: center, tooltip: '', border: '',
-        enabled: true, foreground: '', visible: true, text: Search, font_size: 14,
-        font: '', spacing_above: medium, icon_align: left, spacing_below: medium,
-        italic: false, background: '', bold: false, underline: false, icon: 'fa:search'}
+      properties: {role: outlined-button, align: right, tooltip: '', border: '', enabled: true,
+        foreground: '', visible: true, text: Search, font_size: 14, font: '', spacing_above: medium,
+        icon_align: left, spacing_below: medium, italic: false, background: '', bold: false,
+        underline: false, icon: 'fa:search'}
       name: button_4
       layout_properties: {grid_position: 'BLESZH,VEIXMU'}
       event_bindings: {click: filter_change}
     - type: Button
-      properties: {role: filled-button, align: left, tooltip: '', border: '', enabled: true,
+      properties: {role: outlined-button, align: left, tooltip: '', border: '', enabled: true,
         foreground: '', visible: true, text: Filters, font_size: 14, font: '', spacing_above: medium,
         icon_align: left, spacing_below: medium, italic: false, background: '', bold: false,
         underline: false, icon: 'fa:sliders'}
