--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -558,7 +558,7 @@ components:
     components:
     - type: ColumnPanel
       properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-        wrap_on: never, col_spacing: none, spacing_above: none, col_widths: '{"FOCTRF":65,"UVKESM":10}',
+        wrap_on: never, col_spacing: none, spacing_above: none, col_widths: '{"FOCTRF":68,"UVKESM":7}',
         spacing_below: none, background: ''}
       name: column_panel_4
       layout_properties: {grid_position: 'BLESZH,KAZWCC'}
@@ -574,9 +574,9 @@ components:
       - type: Link
         properties: {role: null, url: '', align: left, tooltip: clear search, border: '',
           foreground: '', visible: false, text: '', font_size: null, wrap_on: never,
-          font: '', col_spacing: none, spacing_above: none, icon_align: right, col_widths: '',
-          spacing_below: none, italic: false, background: '', bold: false, underline: false,
-          icon: 'fa:times-circle'}
+          font: '', col_spacing: none, spacing_above: none, icon_align: right_edge,
+          col_widths: '', spacing_below: none, italic: false, background: '', bold: false,
+          underline: false, icon: 'fa:times-circle'}
         layout_properties: {row: YQKNAU, width_xs: 1, col_xs: 8, width: 148, grid_position: 'DQVXYD,UVKESM'}
         event_bindings: {click: clear_search}
         name: clear_icon
