--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -596,7 +596,12 @@ components:
       name: filterbutton
       layout_properties: {grid_position: 'BLESZH,JCYLBV'}
       event_bindings: {click: show_filter}
+  - type: Label
+    properties: {}
+    name: loggedin
+    layout_properties: {grid_position: 'OWIDMW,NEKHRQ YQSXTT,FJBSJM'}
+    data_bindings: []
   - type: Spacer
     properties: {height: 32}
     name: spacer_1
-    layout_properties: {grid_position: 'OWIDMW,NEKHRQ'}
+    layout_properties: {grid_position: 'OWIDMW,NEKHRQ HKVFUC,HVKDCN'}
