--- a/client_code/Homepage/form_template.yaml
+++ b/client_code/Homepage/form_template.yaml
@@ -558,38 +558,36 @@ components:
     components:
     - type: ColumnPanel
       properties: {role: null, tooltip: '', border: '', foreground: '', visible: true,
-        wrap_on: never, col_spacing: none, spacing_above: none, col_widths: '{"FOCTRF":78,"UVKESM":7}',
+        wrap_on: never, col_spacing: none, spacing_above: none, col_widths: '{}',
         spacing_below: none, background: ''}
       name: column_panel_4
       layout_properties: {grid_position: 'BLESZH,KAZWCC'}
       components:
-      - type: Button
-        properties: {role: null, align: center, tooltip: '', border: '', enabled: true,
-          foreground: '', visible: false, text: '', font_size: null, font: '', spacing_above: small,
-          icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-          underline: false, icon: ''}
-        name: searchbutton
-        layout_properties: {grid_position: 'DQVXYD,VFEDGI'}
-        data_bindings: []
-        event_bindings: {click: clear_search}
-      - type: TextBox
-        properties: {role: outlined, align: left, hide_text: false, tooltip: '', placeholder: 'Search
-            reference, brand or customer', border: none, enabled: true, foreground: '',
-          visible: true, text: '', font_size: null, font: '', spacing_above: medium,
-          type: text, spacing_below: none, italic: false, background: '', bold: false,
-          underline: false}
-        name: text_box_search
-        layout_properties: {grid_position: 'DQVXYD,FOCTRF'}
-        event_bindings: {pressed_enter: filter_change}
-      - type: Link
-        properties: {role: null, url: '', align: left, tooltip: clear search, border: '',
-          foreground: 'theme:Error', visible: false, text: '', font_size: null, wrap_on: never,
-          font: '', col_spacing: none, spacing_above: none, icon_align: left_edge,
-          col_widths: '', spacing_below: none, italic: false, background: '', bold: false,
-          underline: false, icon: 'fa:times-circle'}
-        layout_properties: {row: YQKNAU, width_xs: 1, col_xs: 8, width: 148, grid_position: 'DQVXYD,UVKESM'}
-        event_bindings: {click: clear_search}
-        name: clear_icon
+      - type: XYPanel
+        properties: {role: null, width: null, align: center, height: 28, tooltip: '',
+          border: '', foreground: '', visible: true, spacing_above: none, spacing_below: none,
+          background: ''}
+        name: xy_panel_1
+        layout_properties: {grid_position: 'ATKVYV,QNEOYP'}
+        components:
+        - type: TextBox
+          properties: {role: outlined, align: left, hide_text: false, tooltip: '',
+            placeholder: 'Search reference, brand or customer', border: none, enabled: true,
+            foreground: '', visible: true, text: '', font_size: null, font: '', spacing_above: medium,
+            type: text, spacing_below: medium, italic: false, background: '', bold: false,
+            underline: false}
+          name: text_box_search
+          layout_properties: {grid_position: 'HCNRPB,MYRKTJ', x: 0, y: 9, width: 246.29700000000003}
+          event_bindings: {pressed_enter: filter_change}
+        - type: Button
+          properties: {role: filled-button, align: left, tooltip: '', border: '',
+            enabled: true, foreground: '', visible: false, text: '', font_size: 14,
+            font: '', spacing_above: medium, icon_align: right, spacing_below: medium,
+            italic: false, background: '', bold: false, underline: false, icon: 'fa:times'}
+          name: clearbutton
+          layout_properties: {grid_position: 'HCNRPB,LFMMUI', x: 17, y: 9, width: 278.297}
+          data_bindings: []
+          event_bindings: {click: clear_search}
     - type: Button
       properties: {role: outlined-button, align: right, tooltip: '', border: '', enabled: true,
         foreground: '', visible: true, text: Search, font_size: 14, font: '', spacing_above: medium,
@@ -599,7 +597,7 @@ components:
       layout_properties: {grid_position: 'BLESZH,VEIXMU'}
       event_bindings: {click: filter_change}
     - type: Button
-      properties: {role: outlined-button, align: left, tooltip: '', border: '', enabled: true,
+      properties: {role: filter-button, align: left, tooltip: '', border: '', enabled: true,
         foreground: '', visible: true, text: Filters, font_size: 14, font: '', spacing_above: medium,
         icon_align: left, spacing_below: medium, italic: false, background: '', bold: false,
         underline: false, icon: 'fa:sliders'}
@@ -622,7 +620,3 @@ components:
     name: loggedin
     layout_properties: {grid_position: 'OWIDMW,CFEBSB LOKPMK,MTVGOU'}
     data_bindings: []
-  - type: form:TokenBox
-    properties: {}
-    name: token_box_1
-    layout_properties: {grid_position: 'HCNRPB,JSOKTC'}
