--- a/theme/parameters.yaml
+++ b/theme/parameters.yaml
@@ -43,6 +43,7 @@ roles:
   components: [CheckBox]
 - {name: star-button}
 - {name: green-filled-button}
+- {name: filter-button}
 color_scheme:
   preset_groups:
   - name: Colour Scheme
@@ -330,3 +331,5 @@ color_scheme:
   - {name: Font, color: '#262626'}
   - {name: Header, color: '#fafafa'}
   - {name: Toggle, color: '#20cb45'}
+  - {name: Black, color: '#000000'}
+  - {name: White, color: '#FFFFFF'}
